# python-app-template

./: .gitignore  Makefile  README.md  alembic.ini  config.example.yaml  pyproject.toml
app/: main.py
app/api/v1/dependencies/: __init__.py
app/api/v1/routes/: __init__.py  user.py
app/api/v1/schemas/: __init__.py  base.py  user.py
app/core/: __init__.py
app/core/config/: __init__.py  config.py
app/core/logging/: __init__.py  logging.py
app/core/setup/: __init__.py  app_factory.py
app/domain/user/: __init__.py  entities.py  interfaces.py  usecases.py
app/infrastructure/database/: __init__.py
app/infrastructure/database/postgres/: __init__.py  base.py  connection_manager.py
app/infrastructure/database/postgres/models/: __init__.py  user.py
app/infrastructure/database/postgres/repositories/: __init__.py  user.py
app/infrastructure/services/: __init__.py  user.py
migrations/: env.py
